# inventree-mcp-plugin

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cspell.yaml  docker-compose.dev.yml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
inventree_mcp_plugin/: core.py  mcp_server.py  mcp_transport.py
inventree_mcp_plugin/tools/: __init__.py
inventree_mcp_plugin/tools/combinatory/: __init__.py  parts.py  stock.py
inventree_mcp_plugin/tools/complex/: __init__.py
inventree_mcp_plugin/tools/simple/: __init__.py  bom.py  builds.py  categories.py  locations.py  orders.py  parts.py  stock.py  tags.py
scripts/: integration-test.sh
stubs/order/: models.pyi
stubs/part/: models.pyi
stubs/plugin/: __init__.pyi  mixins.pyi
stubs/stock/: models.pyi
stubs/taggit/: models.pyi
tests/: conftest.py  test_categories.py  test_combinatory.py  test_field_projection.py  test_locations.py  test_parts.py  test_schema.py  test_stock.py  test_tags.py  test_tools.py
