[project]
name = "inventree-mcp-plugin"
version = "0.1.0"
description = "MCP (Model Context Protocol) server plugin for InvenTree"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "eljefedelrodeodeljefe" }]

dependencies = [
    "mcp>=1.9",
]

[project.entry-points."inventree_plugins"]
InvenTreeMCPPlugin = "inventree_mcp_plugin.core:InvenTreeMCPPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = [
    "RUF029",  # async functions required by ASGI interface even without await
]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # Django/InvenTree provided by host, no stubs in dev

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "django-types>=0.23.0",
    "mypy>=1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
