[project]
name = "inventree-mcp-plugin"
version = "1.0.0"
description = "MCP (Model Context Protocol) server plugin for InvenTree"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "eljefedelrodeodeljefe" }]

dependencies = [
    "mcp>=1.9",
]

[project.entry-points."inventree_plugins"]
InvenTreeMCPPlugin = "inventree_mcp_plugin.core:InvenTreeMCPPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = [
    "RUF029",  # async functions required by ASGI interface even without await
]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # Django/InvenTree provided by host, no stubs in dev

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov-report=term --cov-report=html --cov-report=lcov"

[dependency-groups]
dev = [
    "asgiref>=3.7",
    "django-types>=0.23.0",
    "mypy>=1.0",
    "pytest-asyncio>=0.24",
    "python-semantic-release>=9.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.15.2",
]

[tool.coverage.run]
source = ["inventree_mcp_plugin"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
